# AMD_Robotics_Hackathon_2025_InverseKinematricks

./: .gitignore  README.md
assets/: setup_excalidraw
mission1/: save_cmd
mission1/code/: training-models-on-rocm.ipynb
mission1/wandb/: latest-run
mission1/wandb/run-20251212_213411-68fkyil6/: run-68fkyil6.wandb
mission2/: requirements.txt  save_cmd  save_cmd.md
mission2/code/: training-models-on-rocm.ipynb
mission2/code/black_sort/: training-models-on-rocm.ipynb
mission2/code/cv_classfication/: app.py  classifier.py  pyproject.toml  tape_classifier.pkl  tape_classifier.pt
mission2/code/cv_classfication/src/: app.py  tape_classifier.pt
mission2/code/ramps_X_stepper/: pyproject.toml  ramps_X_stepper.ino
mission2/code/system/: pyproject.toml  requirements-rocm.txt
mission2/code/system/src/: arm_controller.py  fake_conveyor_server.py  fake_main_arms.py  main_arms.py  main_conveyor_belt.py  state_machine.py
mission2/code/system/src/communication/: __init__.py  client.py  messages.py  server.py
mission2/code/system/src/policies/: __init__.py  base.py  flip.py  pick.py  sort.py
mission2/wandb/wandb_black_sort_2/: latest-run
mission2/wandb/wandb_black_sort_smolvla_v5/: latest-run
mission2/wandb/wandb_blue_pick_cardboard_smolvla_v2/: latest-run
mission2/wandb_black_flip_smolvla/: latest-run
mission2/wandb_black_flip_smolvla_v3/: latest-run
mission2/wandb_blue_pick/wandb/: latest-run
mission2/wandb_blue_pick_act_cardboard/: latest-run
mission2/wandb_blue_pick_act_cardboard_v2/: latest-run
mission2/wandb_blue_pick_smolvla_v2/: latest-run
(+58 files in other folders)
